--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
   <head>
     <title>Extreme Demon Platformer List</title>
-    <script>
+    <style>
       .LevelItem {
-        
+          outline: #D3D3D3 solid 2px;
       }
-    </script>
+@font-face {
+  font-family: "Lexend";
+  src: url("fonts/lexend.woff") format('woff');
+}
+body {
+  font-family: Lexend
+}
+    </style>
   </head>
   <body>
     <h1>Extreme Demon Platformer List</h1>
