--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       .LevelItem {
           outline: #D3D3D3 solid 2px;
+          width: 50%
       }
 @font-face {
   font-family: "Lexend";
@@ -20,6 +21,11 @@ body {
       <h3>I wanna be the guy</h3>
       <h6>by </h6><h5>aless50</h5>
       <h6>verified by </h6><h5>aless50</h5>
+    </div>
+    <div class="LevelItem">
+      <h3>The Tower XXII</h3>
+      <h6>by </h6><h5>o1iv3</h5>
+      <h6>verified by </h6><h5>ninz</h5>
     </div>
   </body>
 </html>
