--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
   <head>
     <title>Extreme Demon Platformer List</title>
     <style>
-      .LevelItem {
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
+}
+.LevelItem {
           outline: #D3D3D3 solid 2px;
           width: 50%
-      }
+}
 @font-face {
   font-family: "Lexend";
   src: url("fonts/lexend.woff") format('woff');
