--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ body {
     vertical-align: middle;
 }
 .LevelItem {
-          outline: #D3D3D3 solid 2px;
+  outline: #D3D3D3 solid 2px;
+  text-align: center
 }
 @font-face {
   font-family: "Lexend";
