--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@ body {
     <h1>Extreme Demon Platformer List</h1>
     <div class="LevelItem">
       <h3>I wanna be the guy</h3>
-      <h5>by aless50</h5>
-      <h5>verified by aless50</h5>
+      <h5>by aless50, verified by aless50</h5>
       <a href="https://www.youtube.com/watch?v=k4-JaCENaI4">YouTube</a>
     </div>
     <div class="LevelItem">
       <h3>The Tower XXII</h3>
-      <h5>by o1iv3</h5>
-      <h5>verified by ninz</h5>
+      <h5>by o1iv3, verified by ninz</h5>
       <a href="https://www.youtube.com/watch?v=iehrZFnPMaw">YouTube</a>
     </div>
   </body>
