--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@ body {
   </head>
   <body>
     <h1>Extreme Demon Platformer List</h1>
+<div class="LevelItem">
+      <h3>1. Worlds Hardest Game</h3>
+      <h5>by Infernal331, verified by Infernal331</h5>
+      <a href="https://www.youtube.com/watch?v=m8C6Nn7_Izg">YouTube</a>
+    </div>
     <div class="LevelItem">
-      <h3>1. I wanna be the guy</h3>
+      <h3>2. I wanna be the guy</h3>
       <h5>by aless50, verified by aless50</h5>
       <a href="https://www.youtube.com/watch?v=k4-JaCENaI4">YouTube</a>
     </div>
